--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -57,6 +57,11 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.10.1</version>
     </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.2</version>
+    </dependency>
   </dependencies>
 
   <build>
